--- a/braclet.html
+++ b/braclet.html
@@ -15,28 +15,28 @@
         <div class="gal1">
             <div class="gallery">
 
-                <img src="Bracelet Images/br1.jpg" alt="Cinque Terre" width="600" height="400">
+                <img src="br1.jpg" alt="Cinque Terre" width="600" height="400">
 
                 <div class="desc">ID:B01 Price: Rs.250</div>
             </div>
 
             <div class="gallery">
 
-                <img src="Bracelet Images/br2.jpg" alt="Cinque Terre" width="600" height="400">
+                <img src="br2.jpg" alt="Cinque Terre" width="600" height="400">
 
                 <div class="desc">ID:B02 Price: Rs.650</div>
             </div>
 
             <div class="gallery">
 
-                <img src="Bracelet Images/br3.jpg" alt="Cinque Terre" width="600" height="400">
+                <img src="br3.jpg" alt="Cinque Terre" width="600" height="400">
 
                 <div class="desc">ID:B03 Price: Rs.300</div>
             </div>
 
             <div class="gallery">
 
-                <img src="Bracelet Images/br4.jpg" alt="Cinque Terre" width="600" height="400">
+                <img src="br4.jpg" alt="Cinque Terre" width="600" height="400">
 
                 <div class="desc">ID:B04 Price: Rs.999</div>
             </div>
@@ -45,28 +45,28 @@
         <div class="gal1">
             <div class="gallery">
 
-                <img src="Bracelet Images/br5.jpg" alt="Cinque Terre" width="600" height="400">
+                <img src="br5.jpg" alt="Cinque Terre" width="600" height="400">
 
                 <div class="desc">ID:B05 Price: Rs.200</div>
             </div>
 
             <div class="gallery">
 
-                <img src="Bracelet Images/br6.jpg" alt="Cinque Terre" width="600" height="400">
+                <img src="br6.jpg" alt="Cinque Terre" width="600" height="400">
 
                 <div class="desc">ID:B06 Price: Rs.380</div>
             </div>
 
             <div class="gallery">
 
-                <img src="Bracelet Images/br7.jpg" alt="Cinque Terre" width="600" height="400">
+                <img src="br7.jpg" alt="Cinque Terre" width="600" height="400">
 
                 <div class="desc">ID:B07 Price: Rs.400</div>
             </div>
 
             <div class="gallery">
 
-                <img src="Bracelet Images/br8.jpg" alt="Cinque Terre" width="600" height="400">
+                <img src="br8.jpg" alt="Cinque Terre" width="600" height="400">
 
                 <div class="desc">ID:B08 Price: Rs.500</div>
             </div>
