--- a/earring.html
+++ b/earring.html
@@ -15,28 +15,28 @@
         <div class="gal1">
             <div class="gallery">
 
-                <img src="Earring Images/ear1.jpg" alt="Cinque Terre" width="600" height="400">
+                <img src="ear1.jpg" alt="Cinque Terre" width="600" height="400">
 
                 <div class="desc">ID:E01 Price: Rs.1150</div>
             </div>
 
             <div class="gallery">
 
-                <img src="Earring Images/ear2.jpg" alt="Cinque Terre" width="600" height="400">
+                <img src="ear2.jpg" alt="Cinque Terre" width="600" height="400">
 
                 <div class="desc">ID:E02 Price: Rs.650</div>
             </div>
 
             <div class="gallery">
 
-                <img src="Earring Images/ear3.jpg" alt="Cinque Terre" width="600" height="400">
+                <img src="ear3.jpg" alt="Cinque Terre" width="600" height="400">
 
                 <div class="desc">ID:E03 Price: Rs.300</div>
             </div>
 
             <div class="gallery">
 
-                <img src="Earring Images/ear4.jpg" alt="Cinque Terre" width="600" height="400">
+                <img src="ear4.jpg" alt="Cinque Terre" width="600" height="400">
 
                 <div class="desc">ID:E04 Price: Rs.200</div>
             </div>
@@ -45,28 +45,28 @@
         <div class="gal1">
             <div class="gallery">
 
-                <img src="Earring Images/ear5.jpg" alt="Cinque Terre" width="600" height="400">
+                <img src="ear5.jpg" alt="Cinque Terre" width="600" height="400">
 
                 <div class="desc">ID:E05 Price: Rs.200</div>
             </div>
 
             <div class="gallery">
 
-                <img src="Earring Images/ear6.jpg" alt="Cinque Terre" width="600" height="400">
+                <img src="ear6.jpg" alt="Cinque Terre" width="600" height="400">
 
                 <div class="desc">ID:E06 Price: Rs.380</div>
             </div>
 
             <div class="gallery">
 
-                <img src="Earring Images/ear7.jpg" alt="Cinque Terre" width="600" height="400">
+                <img src="ear7.jpg" alt="Cinque Terre" width="600" height="400">
 
                 <div class="desc">ID:E07 Price: Rs.400</div>
             </div>
 
             <div class="gallery">
 
-                <img src="Earring Images/ear8.jpg" alt="Cinque Terre" width="600" height="400">
+                <img src="ear8.jpg" alt="Cinque Terre" width="600" height="400">
 
                 <div class="desc">ID:E08 Price: Rs.500</div>
             </div>
