--- a/necklace.html
+++ b/necklace.html
@@ -15,21 +15,21 @@
         <div class="gal1">
             <div class="gallery">
 
-                <img src="Necklace Images/neck 1.jpg" alt="Cinque Terre" width="600" height="400">
+                <img src="neck 1.jpg" alt="Cinque Terre" width="600" height="400">
 
                 <div class="desc">ID:E01 Price: Rs.1150</div>
             </div>
 
             <div class="gallery">
 
-                <img src="Necklace Images/neck 2.jpg" alt="Cinque Terre" width="600" height="400">
+                <img src="neck 2.jpg" alt="Cinque Terre" width="600" height="400">
 
                 <div class="desc">ID:E02 Price: Rs.650</div>
             </div>
 
             <div class="gallery">
 
-                <img src="Necklace Images/neck 3.jpg" alt="Cinque Terre" width="600" height="400">
+                <img src="neck 3.jpg" alt="Cinque Terre" width="600" height="400">
 
                 <div class="desc">ID:E03 Price: Rs.300</div>
             </div>
@@ -45,28 +45,28 @@
         <div class="gal1">
             <div class="gallery">
 
-                <img src="Necklace Images/neck 5.jpg" alt="Cinque Terre" width="600" height="400">
+                <img src="neck 5.jpg" alt="Cinque Terre" width="600" height="400">
 
                 <div class="desc">ID:E05 Price: Rs.200</div>
             </div>
 
             <div class="gallery">
 
-                <img src="Necklace Images/neck 6.jpg" alt="Cinque Terre" width="600" height="400">
+                <img src="neck 6.jpg" alt="Cinque Terre" width="600" height="400">
 
                 <div class="desc">ID:E06 Price: Rs.380</div>
             </div>
 
             <div class="gallery">
 
-                <img src="Necklace Images/neck 7.jpg" alt="Cinque Terre" width="600" height="400">
+                <img src="neck 7.jpg" alt="Cinque Terre" width="600" height="400">
 
                 <div class="desc">ID:E07 Price: Rs.400</div>
             </div>
 
             <div class="gallery">
 
-                <img src="Necklace Images/neck 8.jpg" alt="Cinque Terre" width="600" height="400">
+                <img src="neck 8.jpg" alt="Cinque Terre" width="600" height="400">
 
                 <div class="desc">ID:E08 Price: Rs.500</div>
             </div>
